Fixed problem with vertical align in buttons -- buttons now require text beside icons to be wrapped in a <span> for proper vertical alignment

--- a/css/index.scss
+++ b/css/index.scss
@@ -178,6 +178,13 @@ header .header-space
 .button,
 button
 {
+  text-decoration: none;
+
+  > *
+  {
+    vertical-align: middle;
+  }
+
   &:focus
   {
     outline: none;
